js/js.translator/testData/incremental/invalidation/mainFunctionSelectSingleAddPlainLater/main/z.1.kt
package z

fun main() {
    value.ok += "Z1"
}
